# fontspector

./: Cargo.toml  README.md  USAGE.txt  package.json  port_check.py
.github/ISSUE_TEMPLATE/: 1_improve-check.md  2_new-check.md  3_general-issue.md  config.yml
.github/workflows/: rust.yml
fontbakery-bridge/src/: lib.rs
fontspector-checkapi/: Cargo.toml
fontspector-checkapi/src/: check.rs  codetesting.rs  context.rs  font.rs  gsub.rs  pens.rs  profile.rs  status.rs
fontspector-checkhelper/src/: check.rs
fontspector-cli/: Cargo.toml  build.rs
fontspector-cli/src/: args.rs  main.rs
fontspector-cli/src/reporters/: csv.rs  duckdb.rs  jinja.rs  json.rs  markdown.rs  mod.rs
fontspector-py/tests/: test_checks_googlefonts.py
fontspector-web/: Cargo.toml
fontspector-web/src/: lib.rs
fontspector-web/www/: bootstrap.js  index.html  index.ts  package-lock.json  package.json  rendering.ts  tsconfig.json  types.ts  webpack.config.js
profile-adobe/: Cargo.toml
profile-adobe/src/: lib.rs
profile-adobe/src/checks/: mod.rs
profile-adobe/src/checks/adobefonts/: STAT_strings.rs  mod.rs  nameid_1_win_english.rs  unsupported_tables.rs
profile-adobe/src/checks/adobefonts/family/: consistent_upm.rs  mod.rs
profile-googlefonts/: Cargo.toml  build.rs
profile-googlefonts/src/: lib.rs  network_conditions.rs
profile-googlefonts/src/checks/: dotted_circle.rs  soft_dotted.rs
profile-iso15008/: Cargo.toml
profile-iso15008/src/: lib.rs
profile-iso15008/src/checks/: mod.rs
profile-iso15008/src/checks/iso15008/: intercharacter_spacing.rs  interline_spacing.rs  interword_spacing.rs  mod.rs  proportions.rs  stem_width.rs
profile-microsoft/: Cargo.toml
profile-microsoft/src/: lib.rs
profile-microsoft/src/checks/: mod.rs  name_id_1.rs  name_id_2.rs  name_length_req.rs  tnum_glyphs_equal_widths.rs
profile-microsoft/src/checks/microsoft/: STAT_axis_values.rs  STAT_table_axis_order.rs  STAT_table_eliding_bit.rs  copyright.rs  fstype.rs  fvar_STAT_axis_ranges.rs  license_description.rs  manufacturer.rs  mod.rs  office_ribz_req.rs  trademark.rs  vendor_url.rs  version.rs  vertical_metrics.rs
profile-opentype/: Cargo.toml
profile-testplugin/: Cargo.toml
profile-universal/: Cargo.toml
profile-universal/src/: lib.rs
profile-universal/src/checks/: STAT_in_statics.rs  STAT_strings.rs  alt_caron.rs  arabic_high_hamza.rs  arabic_spacing_symbols.rs  base_has_width.rs  case_mapping.rs  cjk_not_enough_glyphs.rs  cmap_format_12.rs  color_cpal_brightness.rs  empty_glyph_on_gid1_for_colrv0.rs  empty_letters.rs  family_vertical_metrics.rs  family_win_ascent_and_descent.rs  fontdata_namecheck.rs  gpos7.rs  gpos_kerning_info.rs  hinting_impact.rs  integer_ppem_if_hinted.rs  interpolation_issues.rs  legacy_accents.rs  ligature_carets.rs  linegaps.rs  math_signs_width.rs  missing_small_caps_glyphs.rs  mod.rs  nested_components.rs  no_mac_entries.rs  os2_metrics_match_hhea.rs  (+15 more)
profiles/: fontbureau.toml  fontwerk.toml  silfonts.toml
scripts/: port_profile.py
templates/html/: base.css  check.html  main.html  section.html  summary_notes.html  summary_table.html
templates/markdown/: check.markdown
(+90 files in other folders)
