[package]
name = "fontspector"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
description = "Quality control for OpenType fonts"
repository = "https://github.com/simoncozens/fontspector"
license = "Apache-2.0"

[features]
python = ["dep:fontbakery-bridge"]

[build-dependencies]
walkdir = "2.5"
zip = "2.5"
quote = "1.0"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = ["clap"] }
# These profiles are baked-in
fontbakery-bridge = { path = "../fontbakery-bridge", optional = true }
profile-universal = { path = "../profile-universal" }
profile-opentype = { path = "../profile-opentype" }
profile-googlefonts = { path = "../profile-googlefonts" }
clap = { version = "4", features = ["derive"] }
itertools = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
rayon = "1.0.1"
indicatif = { version = "0.17", features = ["rayon"] }
homedir = "0.3.4"

# Terminal reporter
termimad = "0"
colored = "2.1.0"

# JSON reporter
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown/HTML reporters
tera = { version = "1.20.0", default-features = false }
zip = "2.5"

# CSV reporter
csv = "1.3.1"

# DuckDB reporter
duckdb = { version = "1.2.1", features = ["bundled"], optional = true }
chrono = "0.4"

# HTML reporter
markdown = "1.0.0-alpha.23"
indexmap = { workspace = true }
