[package]
name = "profile-adobe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
skrifa = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }
