[package]
name = "profile-iso15008"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
skrifa = { workspace = true }
kurbo = { workspace = true }
itertools = { workspace = true }
rustybuzz = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }
