[package]
name = "profile-iso15008"
version = "0.1.0"
edition = "2021"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
skrifa = { workspace = true }
kurbo = { workspace = true }
itertools = { workspace = true }
rustybuzz = { workspace = true }
